tests/integration/snapshots/integration__test_json__unexpected_letter_in_number.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
1a
stdout --- 
<empty>
stderr --- 
error: unexpected character `a`. expected start of a json value
 --> stdin:1:2
  |
1 | 1a
  |  ^
